# c_face_rec

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TestOpenCVCmake  cmake_install.cmake  face_data_webcam.cpp  face_rec.cpp  main.cpp  run_auto.cpp  test.cpp  test2.cpp
DriverConnector/: DriverConnector.hpp
UltraFace/: UltraFace.cpp  UltraFace.hpp
